tests/checker/diagnostics/0380_optional_argument_call_mismatch_07.ml
let ( + ) (x : int) (y : int) : int = x
let add_eta ?(x = 6) (y : int) = x + y
let _ = add_eta ~x:true 7
